--- a/src/main/resources/templates/cargo/cadastro.html
+++ b/src/main/resources/templates/cargo/cadastro.html
@@ -20,12 +20,11 @@
 		</nav>
 
 		<div class="container" id="cadastro">
-			<form action="/cargos/salvar" method="POST">
+			<form th:action="@{/cargos/salvar}" th:object="${cargo}" method="POST">
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<label for="nome">Nome do Cargo</label> <input type="text"
-							class="form-control" id="nome" placeholder="Nome Cargo"
-							autofocus="autofocus" name="nome" value="" />
+						<label for="nome">Nome do Cargo</label> <input type="text" class="form-control" id="nome" placeholder="Nome Cargo" 
+						autofocus="autofocus" th:field="*{nome}" />
 					</div>
 					<div class="form-group col-md-4">
 						<label for="departamento">Departamento</label> <select
