--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -38,17 +38,15 @@
 								th:href="@{/departamentos/editar/{id} (id=${d.id}) }" role="button"> <span
 									class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a>
-								<button id="btn_departamentos/excluir/3" type="button"
-									class="btn btn-danger btn-sm">
-									<span class="oi oi-circle-x" title="Exclusão desabilitada"
-										aria-hidden="true"></span>
+								<button th:id="${ 'btn_departamentos/excluir/' + d.id}" type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal">
+									<span class="oi oi-circle-x" title="Exclusão desabilitada"	aria-hidden="true"></span>
 								</button></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
-
+		<div th:replace = "fragments/modal :: modal"></div>
 	</section>
 </body>
 </html>
