--- a/src/main/resources/templates/cargo/cadastro.html
+++ b/src/main/resources/templates/cargo/cadastro.html
@@ -20,6 +20,7 @@
 		</nav>
 
 		<div class="container" id="cadastro">
+			<div th:replace="fragments/alert"></div>
 			<form th:action="@{/cargos/salvar}" th:object="${cargo}" method="POST">
 				<div class="form-row">
 					<div class="form-group col-md-6">
@@ -27,13 +28,11 @@
 						autofocus="autofocus" th:field="*{nome}" />
 					</div>
 					<div class="form-group col-md-4">
-						<label for="departamento">Departamento</label> <select
-							id="departamento" class="form-control" name="departamento">
+						<label for="departamento">Departamento</label> 
+						<select id="departamento" class="form-control" th:field="*{departamento}">
 							<option value="">Selecione</option>
-							<option value="3">Administração</option>
-							<option value="2">Contabilidade</option>
-							<option value="1">Recursos Humanos</option>
-							<option value="4">Tecnologia da Informação</option>
+							<option th:each="d : ${departamentos}" 
+									th:value="${d.id}" th:text="${d.nome}">Selecione</option>
 						</select>
 					</div>
 				</div>
